--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
-
+    implementation 'org.jetbrains.anko:anko-commons:0.10.4'
 }
